--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		</aside>
 	</main>
 	<footer>
-		<p>&copy; Althesia Hylton, 2022</p>
+		<p>&copy; Althesia Hylton, April 7<sup>th</sup> 2022</p>
 	</footer>
 </body>
 </html>
