--- a/speakers/sampson.html
+++ b/speakers/sampson.html
@@ -74,7 +74,7 @@
 		</aside>
 	</main>
 	<footer>
-		<p>&copy; 2018, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy; Althesia Hylton, April 7<sup>th</sup> 2022</p>
 	</footer>
 </body>
 </html>
